<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:layout="@layout/widget_title"
         >
        <com.afollestad.materialdialogs.prefs.MaterialListPreference
            android:defaultValue="@string/pref_interval_default"
            android:dialogTitle="@string/pref_interval"
            android:entries="@array/pref_interval_entry"
            android:entryValues="@array/pref_interval_value"
            android:key="pref_widget_interval"
            android:title="@string/pref_interval" />

        <com.afollestad.materialdialogs.prefs.MaterialMultiSelectListPreference
            android:dialogTitle="@string/pref_filter"
            android:key="pref_widget_filter"
            android:title="@string/pref_filter" />
    </PreferenceCategory>
    <!--
       <Preference
        android:key="pref_widget_done_button"
        android:layout="@layout/widget_done_button"
        android:title="@string/pref_widget_done_button" >
    </Preference>


    -->

</PreferenceScreen>